--- a/themes/stratoserp_theme/scss/style.scss
+++ b/themes/stratoserp_theme/scss/style.scss
@@ -7,7 +7,7 @@
 //@import "../../contrib/bootstrap4/scss/style";
 
 // OR test new Bootstrap 4.5.0
-@import "../../../../themes/contrib/bootstrap4/scss/style-4-5-0";
+@import "../../../../../themes/contrib/bootstrap4/scss/style";
 
 // Include custom sub theme.
 @import 'custom/variables';
@@ -22,8 +22,15 @@
     li {
       display: inline-block;
       margin: 0 0.25rem 0.25rem 0;
+
       .btn {
         padding: .2rem .4rem;
+      }
+      form {
+        .form-item, input {
+          margin: 0;
+          display: inline-block;
+        }
       }
     }
   }
@@ -59,8 +66,36 @@ div.vertical-tabs__panes {
   }
 }
 
-.layout__region {
-  padding: .5rem;
+.layout {
+  .field--label,
+  .field--label-hidden,
+  .field__label {
+    clear: both;
+  }
+}
+
+.layout--twocol {
+  .layout__region {
+    padding: 5px;
+  }
+  .layout__region--top {
+    padding: 0;
+  }
+  .layout__region--bottom {
+    mark {
+      float: right;
+      padding: 1em;
+      background-color: #ff0;
+      border-radius: 50%;
+      position: absolute;
+      right: 0;
+    }
+    section article:nth-of-type(odd)  { background-color:#eee; }
+    section article:nth-of-type(even) { background-color:#fff; }
+    section article footer .layout--onecol {
+      padding: 0;
+    }
+  }
 }
 
 #stratoserp-search-form {
@@ -70,22 +105,14 @@ div.vertical-tabs__panes {
   }
 }
 
-// Chosen addon needs some tweaks. Actually, removed it for now.
-.form-select {
-  &.chosen-enable {
-    border: unset;
-    font-size: 13px;
-    width: unset;
-  }
-}
-
 .form-control {
   width: unset;
 }
 
-.node-form {
-  .form-actions {
-    text-align: left;
+.form-item {
+  margin: .5rem 0 .5rem 0;
+  label {
+    margin-bottom: .25rem;
   }
 }
 
