--- a/themes/stratoserp_theme/templates/pdf/entity-print.html.twig
+++ b/themes/stratoserp_theme/templates/pdf/entity-print.html.twig
@@ -5,10 +5,9 @@
     <link rel="stylesheet" media="all" href="/profiles/contrib/stratoserp_base/themes/stratoserp_theme/css/print.css" />
   </head>
   <body>
-    <h1>{{ node_type }}</h1>
-    {% if logo_path %}
-    <img id="logo" alt="logo" src="file://{{ logo_path }}" />
-    {%  endif %}
+    {% if site_logo %}
+      <img src="{{ site_logo }}" />
+    {% endif %}
     {{ label }}
     <div class="page">
       {{ content }}
