--- a/themes/stratoserp_theme/scss/style.scss
+++ b/themes/stratoserp_theme/scss/style.scss
@@ -170,25 +170,19 @@ nav {
     .toolbar-icon-link-toolbar-menu-stratoserp-home::before {
       background-image: url(../icons/house.svg);
     }
-    .toolbar-icon-link-toolbar-menu-views-view-views-se-customer-list-page-1::before {
-      background-image: url(../icons/person.svg);
+    .toolbar-icon-link-toolbar-menu-views-view-views-se-customer-list-se-customer-list::before {
+      background-image: url(../icons/people.svg);
     }
-    .toolbar-icon-link-toolbar-menu-views-view-views-se-information-list-page-1::before {
+    .toolbar-icon-link-toolbar-menu-views-view-views-se-item-list-se-item-list::before {
+      background-image: url(../icons/puzzlepiece.svg);
+    }
+    .toolbar-icon-link-toolbar-menu-views-view-views-se-supplier-list-se-supplier-list::before {
       background-image: url(../icons/file.svg);
     }
-    .toolbar-icon-link-toolbar-menu-views-view-views-se-item-list-page-1::before {
-      background-image: url(../icons/puzzlepiece.svg);
-    }
-    .toolbar-icon-link-toolbar-menu-views-view-views-se-stock-item-list-page-1::before {
-      background-image: url(../icons/puzzlepiece.svg);
-    }
-    .toolbar-icon-link-toolbar-menu-views-view-views-se-supplier-list-page-1::before {
-      background-image: url(../icons/person.svg);
-    }
-    .toolbar-icon-link-toolbar-menu-views-view-views-se-ticket-list-page-1::before {
+    .toolbar-icon-link-toolbar-menu-views-view-views-se-ticket-list-se-ticket-list::before {
       background-image: url(../icons/wrench.svg);
     }
-    .toolbar-icon-link-toolbar-menu-views-view-views-se-timekeeping-list-page-1::before {
+    .toolbar-icon-link-toolbar-menu-views-view-views-se-timekeeping-list-se-timekeeping-list::before {
       background-image: url(../icons/cog.svg);
     }
   }
